--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "eslint-plugin-react-hooks": "^5.2.0-canary-e03ac20f-20250305",
     "npm-install-global": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
